gccida/c3/ix86_fp_jump_nontrivial_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_fp_jump_nontrivial_p/src/i386.c:8153:34: error: must use 'enum' tag to refer to type 'rtx_code'
bool  ix86_fp_jump_nontrivial_p( rtx_code code) 
                                 ^
                                 enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_fp_jump_nontrivial_p/src/i386.c:8157:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code first_code; // [rsp+14h] [rbp-4h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_fp_jump_nontrivial_p/src/i386.c:8162:45: error: expected expression
ix86_fp_comparison_codes( code, ( rtx_code *)&v3 + 1, &first_code, ( rtx_code *)&v3); 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_fp_jump_nontrivial_p/src/i386.c:8162:35: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
ix86_fp_comparison_codes( code, ( rtx_code *)&v3 + 1, &first_code, ( rtx_code *)&v3); 
                                  ^~~~~~~~
                                  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_fp_jump_nontrivial_p/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_fp_jump_nontrivial_p/src/i386.c:8162:80: error: expected expression
ix86_fp_comparison_codes( code, ( rtx_code *)&v3 + 1, &first_code, ( rtx_code *)&v3); 
                                                                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_fp_jump_nontrivial_p/src/i386.c:8162:70: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
ix86_fp_comparison_codes( code, ( rtx_code *)&v3 + 1, &first_code, ( rtx_code *)&v3); 
                                                                     ^~~~~~~~
                                                                     rtx_cost
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_fp_jump_nontrivial_p/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_fp_jump_nontrivial_p/src/obj/i386.o] Error 1
